Askhsh2_2020/simple_jvm/jvmSimp.output
Terminals unused in grammar

   "float"


Grammar

    0 $accept: program $end

    1 $@1: %empty

    2 program: "start" T_id $@1 stmts "end"

    3 stmts: '(' stmt ')'
    4      | '(' stmt ')' stmts
    5      | '(' error ')' stmts

    6 stmt: asmt
    7     | printcmd

    8 printcmd: "print" expr

    9 asmt: T_id expr

   10 unary_expression: '(' "++" T_id ')'
   11                 | '(' T_id "++" ')'

   12 expr: T_num
   13     | T_real
   14     | T_id
   15     | '(' expr ')'
   16     | expr expr '+'
   17     | expr expr '*'
   18     | unary_expression
   19     | '(' "int" expr ')'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 3 4 5 10 11 15 19
')' (41) 3 4 5 10 11 15 19
'*' (42) 17
'+' (43) 16
error (256) 5
T_num (258) 12
T_real (259) 13
T_id (260) 2 9 10 11 14
"start" (261) 2
"end" (262) 2
"print" (263) 8
"int" (264) 19
"float" (265)
"++" (266) 10 11


Nonterminals, with rules where they appear

$accept (16)
    on left: 0
program (17)
    on left: 2, on right: 0
$@1 (18)
    on left: 1, on right: 2
stmts (19)
    on left: 3 4 5, on right: 2 4 5
stmt (20)
    on left: 6 7, on right: 3 4
printcmd (21)
    on left: 8, on right: 7
asmt (22)
    on left: 9, on right: 6
unary_expression (23)
    on left: 10 11, on right: 18
expr (24)
    on left: 12 13 14 15 16 17 18 19, on right: 8 9 15 16 17 19


State 0

    0 $accept: . program $end

    "start"  shift, and go to state 1

    program  go to state 2


State 1

    2 program: "start" . T_id $@1 stmts "end"

    T_id  shift, and go to state 3


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    2 program: "start" T_id . $@1 stmts "end"

    $default  reduce using rule 1 ($@1)

    $@1  go to state 5


State 4

    0 $accept: program $end .

    $default  accept


State 5

    2 program: "start" T_id $@1 . stmts "end"

    '('  shift, and go to state 6

    stmts  go to state 7


State 6

    3 stmts: '(' . stmt ')'
    4      | '(' . stmt ')' stmts
    5      | '(' . error ')' stmts

    error    shift, and go to state 8
    T_id     shift, and go to state 9
    "print"  shift, and go to state 10

    stmt      go to state 11
    printcmd  go to state 12
    asmt      go to state 13


State 7

    2 program: "start" T_id $@1 stmts . "end"

    "end"  shift, and go to state 14


State 8

    5 stmts: '(' error . ')' stmts

    ')'  shift, and go to state 15


State 9

    9 asmt: T_id . expr

    T_num   shift, and go to state 16
    T_real  shift, and go to state 17
    '('     shift, and go to state 18
    T_id    shift, and go to state 19

    unary_expression  go to state 20
    expr              go to state 21


State 10

    8 printcmd: "print" . expr

    T_num   shift, and go to state 16
    T_real  shift, and go to state 17
    '('     shift, and go to state 18
    T_id    shift, and go to state 19

    unary_expression  go to state 20
    expr              go to state 22


State 11

    3 stmts: '(' stmt . ')'
    4      | '(' stmt . ')' stmts

    ')'  shift, and go to state 23


State 12

    7 stmt: printcmd .

    $default  reduce using rule 7 (stmt)


State 13

    6 stmt: asmt .

    $default  reduce using rule 6 (stmt)


State 14

    2 program: "start" T_id $@1 stmts "end" .

    $default  reduce using rule 2 (program)


State 15

    5 stmts: '(' error ')' . stmts

    '('  shift, and go to state 6

    stmts  go to state 24


State 16

   12 expr: T_num .

    $default  reduce using rule 12 (expr)


State 17

   13 expr: T_real .

    $default  reduce using rule 13 (expr)


State 18

   10 unary_expression: '(' . "++" T_id ')'
   11                 | '(' . T_id "++" ')'
   15 expr: '(' . expr ')'
   19     | '(' . "int" expr ')'

    T_num   shift, and go to state 16
    T_real  shift, and go to state 17
    '('     shift, and go to state 18
    T_id    shift, and go to state 25
    "int"   shift, and go to state 26
    "++"    shift, and go to state 27

    unary_expression  go to state 20
    expr              go to state 28


State 19

   14 expr: T_id .

    $default  reduce using rule 14 (expr)


State 20

   18 expr: unary_expression .

    $default  reduce using rule 18 (expr)


State 21

    9 asmt: T_id expr .
   16 expr: expr . expr '+'
   17     | expr . expr '*'

    T_num   shift, and go to state 16
    T_real  shift, and go to state 17
    '('     shift, and go to state 18
    T_id    shift, and go to state 19

    $default  reduce using rule 9 (asmt)

    unary_expression  go to state 20
    expr              go to state 29


State 22

    8 printcmd: "print" expr .
   16 expr: expr . expr '+'
   17     | expr . expr '*'

    T_num   shift, and go to state 16
    T_real  shift, and go to state 17
    '('     shift, and go to state 18
    T_id    shift, and go to state 19

    $default  reduce using rule 8 (printcmd)

    unary_expression  go to state 20
    expr              go to state 29


State 23

    3 stmts: '(' stmt ')' .
    4      | '(' stmt ')' . stmts

    '('  shift, and go to state 6

    $default  reduce using rule 3 (stmts)

    stmts  go to state 30


State 24

    5 stmts: '(' error ')' stmts .

    $default  reduce using rule 5 (stmts)


State 25

   11 unary_expression: '(' T_id . "++" ')'
   14 expr: T_id .

    "++"  shift, and go to state 31

    $default  reduce using rule 14 (expr)


State 26

   19 expr: '(' "int" . expr ')'

    T_num   shift, and go to state 16
    T_real  shift, and go to state 17
    '('     shift, and go to state 18
    T_id    shift, and go to state 19

    unary_expression  go to state 20
    expr              go to state 32


State 27

   10 unary_expression: '(' "++" . T_id ')'

    T_id  shift, and go to state 33


State 28

   15 expr: '(' expr . ')'
   16     | expr . expr '+'
   17     | expr . expr '*'

    T_num   shift, and go to state 16
    T_real  shift, and go to state 17
    '('     shift, and go to state 18
    ')'     shift, and go to state 34
    T_id    shift, and go to state 19

    unary_expression  go to state 20
    expr              go to state 29


State 29

   16 expr: expr . expr '+'
   16     | expr expr . '+'
   17     | expr . expr '*'
   17     | expr expr . '*'

    T_num   shift, and go to state 16
    T_real  shift, and go to state 17
    '('     shift, and go to state 18
    '+'     shift, and go to state 35
    '*'     shift, and go to state 36
    T_id    shift, and go to state 19

    unary_expression  go to state 20
    expr              go to state 29


State 30

    4 stmts: '(' stmt ')' stmts .

    $default  reduce using rule 4 (stmts)


State 31

   11 unary_expression: '(' T_id "++" . ')'

    ')'  shift, and go to state 37


State 32

   16 expr: expr . expr '+'
   17     | expr . expr '*'
   19     | '(' "int" expr . ')'

    T_num   shift, and go to state 16
    T_real  shift, and go to state 17
    '('     shift, and go to state 18
    ')'     shift, and go to state 38
    T_id    shift, and go to state 19

    unary_expression  go to state 20
    expr              go to state 29


State 33

   10 unary_expression: '(' "++" T_id . ')'

    ')'  shift, and go to state 39


State 34

   15 expr: '(' expr ')' .

    $default  reduce using rule 15 (expr)


State 35

   16 expr: expr expr '+' .

    $default  reduce using rule 16 (expr)


State 36

   17 expr: expr expr '*' .

    $default  reduce using rule 17 (expr)


State 37

   11 unary_expression: '(' T_id "++" ')' .

    $default  reduce using rule 11 (unary_expression)


State 38

   19 expr: '(' "int" expr ')' .

    $default  reduce using rule 19 (expr)


State 39

   10 unary_expression: '(' "++" T_id ')' .

    $default  reduce using rule 10 (unary_expression)
